Bone axes letters (X, Y, Z) cannot be seen in Left/Right Orto #46933

Closed
opened 2015-12-07 10:17:07 +01:00 by Tibor Futo · 6 comments

System Information
Win10x64 Pro, Nvidia GTX 660

Blender Version
Broken: 2.76b, f337fea

Short description of error
If you turn on "Axes" in the Armature settings, the letters of the axes are parallel to the X axis, so you cannot see them in Left/Right Ortho (just a line can be seen).

Exact steps for others to reproduce the error

  • File/New
  • Add armature
  • Armature/Display/Axes - check
  • Add bone
  • Select Right Ortho view

Expected: Letter normals are aligned perpendicular to the view.

**System Information** Win10x64 Pro, Nvidia GTX 660 **Blender Version** Broken: 2.76b, f337fea **Short description of error** If you turn on "Axes" in the Armature settings, the letters of the axes are parallel to the X axis, so you cannot see them in Left/Right Ortho (just a line can be seen). **Exact steps for others to reproduce the error** - File/New - Add armature - Armature/Display/Axes - check - Add bone - Select Right Ortho view Expected: Letter normals are aligned perpendicular to the view.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TiborFuto

Added subscriber: @TiborFuto

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Setting as TODO, since this is worth supporting - but not some accident/mistake in the code.

Added to wiki- http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#3D_View

Setting as TODO, since this is worth supporting - but not some accident/mistake in the code. Added to wiki- http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#3D_View
Michał Ziobro self-assigned this 2016-01-30 16:53:48 +01:00

This issue was referenced by 6bbe59fab1

This issue was referenced by 6bbe59fab1945ddedb7328b278821f0de2337137

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46933
No description provided.