Fix T46933: Bone axes letters may not be visible

Now axis letters are view aligned.